--- a/buybuy_privacy.html
+++ b/buybuy_privacy.html
@@ -12,22 +12,23 @@
   </style>
 </head>
 <body>
-  <h1>Polityka Prywatności / Privacy Policy</h1>
-
-  <h2>Polski</h2>
-  <p>Twoja prywatność jest dla nas ważna. W tej polityce wyjaśniamy, jakie dane zbieramy i jak je wykorzystujemy w naszej aplikacji.</p>
-  <p>Nie zbieramy danych osobowych bez Twojej zgody. Nie udostępniamy Twoich danych osobom trzecim, chyba że jest to niezbędne do działania aplikacji lub wymaga tego prawo.</p>
-  <p>Możesz dodawać do list zakupów zdjęcia, które synchronizujemy między Twoimi urządzeniami przy pomocy iCloud (CloudKit).</p>
-  <p>Nie śledzimy użytkowników ani nie przekazujemy danych do celów reklamowych.</p>
-  <p>Jeśli masz pytania dotyczące prywatności, skontaktuj się z nami pod adresem: <i>encore_contact@icloud.com</i></p>
-
-  <hr/>
-
+  <h1>Privacy Policy</h1>
   <h2>English</h2>
   <p>Your privacy is important to us. This policy explains what data we collect and how we use it in our app.</p>
   <p>We do not collect personal data without your consent. We do not share your data with third parties unless it is necessary for the app’s operation or required by law.</p>
   <p>You can add photos to your shopping lists, which we sync across your devices using iCloud (CloudKit).</p>
   <p>We do not track users or share data for advertising purposes.</p>
   <p>If you have any privacy questions, please contact us at: <i>encore_contact@icloud.com</i></p>
+
+  <hr/>  
+  
+  <h1>Polityka Prywatności</h1>
+  <h2>Polski</h2>
+  <p>Twoja prywatność jest dla nas ważna. W tej polityce wyjaśniamy, jakie dane zbieramy i jak je wykorzystujemy w naszej aplikacji.</p>
+  <p>Nie zbieramy danych osobowych bez Twojej zgody. Nie udostępniamy Twoich danych osobom trzecim, chyba że jest to niezbędne do działania aplikacji lub wymaga tego prawo.</p>
+  <p>Możesz dodawać do list zakupów zdjęcia, które synchronizujemy między Twoimi urządzeniami przy pomocy iCloud (CloudKit).</p>
+  <p>Nie śledzimy użytkowników ani nie przekazujemy danych do celów reklamowych.</p>
+  <p>Jeśli masz pytania dotyczące prywatności, skontaktuj się z nami pod adresem: <i>encore_contact@icloud.com</i></p>
+  
 </body>
 </html>
